<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">成大Campus</string>
    <string name="action_settings">Settings</string>
    <string name="attendance">點名</string>
    <string name="tour">導覽</string>
    <string name="association">社團</string>
    <string name="teacher">導生</string>
    <string name="account">UserID</string>
    <string name="password">Password</string>
    <string name="register">註冊</string>
    <string name="login">登入</string>
    <string name="turnon">開放中</string>
    <string name="end">結束</string>
    <string name="passlock">密碼</string>
    <string name="gesture">圖形</string>
    <string name="move">晃動</string>
    <string name="none">無</string>
    <string name="selecttitle">選擇上鎖方式</string>
    <string name="setpass">設定密碼(最多10碼)</string>
    <string name="passagain">再輸入一次</string>
    <string name="check">確定</string>
    <string name="cancel">取消</string>
    <string name="label_me">My Device</string>
    <string name="label_peers">Device</string>
    <string name="empty_message">No devices found. Turn on wifidirect and perform discovery</string>
    <string name="p2p_off">請檢查Wifi-Direct設備選項</string>
    <string name="list">名單</string>
    <string name="success">Success！！</string>
    <string name="waiting">Waiting</string>
    <string name="startcall">開始點名</string>
    <string name="endcall">結束點名</string>
    <string name="festivalname">活動名稱：</string>
    <string name="festivaldate">活動時間：</string>
    <string name="festivalplace">活動地點：</string>
    <string name="festivalcontent">活動內容</string>
    <string name="festival">活動資訊</string>
    <string name="favorite">收藏</string>
    <string name="nofavorite">取消收藏</string>
    <string name="clubname">社團名稱：</string>
    <string name="clubtime">社課時間：</string>
    <string name="clubplace">社課地點：</string>
    <string name="clubfestival">近期活動</string>
    <string name="quickfavor">快加入自己的收藏</string>
    <string name="uploadend">上傳並結束</string>
    <string name="pleaseenter">課程名稱</string>
    <string name="coursetable">課表</string>
    <string name="addtask">新增</string>
    <string name="hw">作業</string>
    <string name="test">考試</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="title">標題：</string>
    <string name="date">到期日：</string>
    <string name="content">內容</string>
    <string name="delete">刪除</string>
    <string name="mode_manual">手動點名</string>
    <string name="mode_auto">自動點名</string>
    <string name="mode_random">隨機點名</string>
    <string name="randomchoose">抽點幾人</string>
    <string name="todolist">待辦</string>
    <string name="post">發佈</string>
    <string name="addtodo">加到待辦</string>
    <string name="resultlist">出席一覽</string>
    <string name="callnumber">欲點人數</string>
    <string name="currentstatus">目前狀態</string>
    <string name="search">查詢</string>
    <string name="announced">已發佈事項</string>
    <string name="put">修改</string>
    <string name="callrate">指定標準</string>
    <string name="finish">完成</string>
    <string name="communication">⊙選擇日期預約導談</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="title_activity_teacher">TeacherActivity</string>
    <string name="title_activity_student_request">StudentRequestActivity</string>
    <string name="SureAndSend">確認送出</string>
    <string name="InputDuration">⊙長度(Min)</string>
    <string name="title_activity_time_choice">TimeChoice</string>
    <string name="Hour">點</string>
    <string name="Minute">分</string>
    <string name="Duration">⊙開始時間</string>
    <string name="notification">通知</string>
    <string name="communication_teacher">目前已排定的預約</string>
    <string name="showRequest">下列是與老師預約的導談</string>
    <string name="back">返回</string>
    <string name="minute">分鐘</string>
    <string name="communication_teacher_todo">選取下列學生</string>
    <string name="showmessage">長按可取消導談預約</string>
    <string name="talkteacher">導談處理</string>
	<string name="talkstudent">所有導談</string>
	<string name="desc">Picture</string>
	<string name="talkdate">日期</string>
	<string name="talklength">導談長度：</string>
	<string name="talktime">時間</string>
	<string name="pleaseinput">請輸入標題:</string>
	<string name="deadline">Deadline：</string>
	<string name="pleaseid">請輸入帳號</string>
	<string name="pleasepass">請輸入密碼</string>
	<string name="pleasetitle">請輸入標題</string>
	<string name="pleasecontent">這邊可以輸入內容</string>
	<string name="percent">%</string>
	<string name="poster">所有海報</string>
	<string name="viewlist">列表</string>
	<string name="empty">Empty List</string>
	
	<string name="loc_ncku">National Cheng Kung University</string>
	<string name="loc_banyan_tree_park">Banyan Tree Park</string>
	<string name="loc_ncku_lake">NCKU Lake</string>
	<string name="loc_ncku_museum">NCKU Museum</string>
	<string name="loc_ncku_books_department">NCKU Books Department</string>
	<string name="loc_qiong_li_zhi_zhi_memorial_arch">Qiong Li Zhi Zhi Memorial Arch</string>
	<string name="loc_green_magic_school">Green Magic School</string>
	<string name="loc_ncku_library">NCKU Library</string>
	<string name="loc_small_western_gate">Small Western Gate</string>
	<string name="loc_ncku_hospital">NCKU Hospital</string>
	<string name="loc_da_tung_market">Da-Tung Night Market</string>
	<string name="loc_flower_night_market">Flower Night Market</string>
</resources>