<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pleaseinput"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pleasetitle"
        android:ems="10"
        android:inputType="text" >
        <requestFocus />
    </EditText>
    
        <RadioGroup 
            android:id="@+id/radioGroup1"
        	android:orientation="horizontal"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content" >
        
        	<RadioButton
            	android:id="@+id/radioButton1"
            	android:layout_width="wrap_content"
     	        android:layout_height="wrap_content"
     	        android:layout_weight="1"
   		        android:gravity="center_vertical|center_horizontal|center|start"
   		        android:checked="true"
    	        android:text="@string/hw" />

       	 <RadioButton
      	      android:id="@+id/radioButton2"
      	      android:layout_width="wrap_content"
        	  android:layout_height="wrap_content"
        	  android:layout_weight="1"
         	  android:gravity="center_vertical|center|start"
        	  android:text="@string/test" />
       	 </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deadline"
            android:textAppearance="?android:attr/textAppearanceLarge" />

	<DatePicker
        android:id="@+id/datePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:calendarViewShown="false" />

</LinearLayout>
