<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/bg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp" >
        
        <TextView
        	android:id="@+id/textView1"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:singleLine="true"
        	android:text="@string/title"
        	android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <EditText
        	android:id="@+id/editText2"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:ems="10"
        	android:gravity="left"
            android:paddingLeft="10dp"
        	android:hint="@string/pleasetitle"
        	android:inputType="text" >
        <requestFocus />
    </EditText>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp" >
        
        <TextView
        	android:id="@+id/textView3"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/date"
        	android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <TextView
       		android:id="@+id/textView4"
       		android:layout_width="match_parent"
       		android:layout_height="wrap_content"
       		android:layout_gravity="center"
       		android:gravity="left"
            android:paddingLeft="10dp"
       		android:text=""
       		android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/content"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <View
       	android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:gravity="center_vertical"
        android:background="@android:color/holo_blue_light" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/pleasecontent"
        android:gravity="top"
        android:inputType="text" >
    </EditText>

</LinearLayout>
