<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

	<LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="vertical"
    	android:id="@+id/bg" >
    	
    	<LinearLayout
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:orientation="vertical" >
        
            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:contentDescription="@string/desc" />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal" >
                    
                    <TextView
                    	android:id="@+id/textView1"
                    	android:layout_width="wrap_content"
                    	android:layout_height="wrap_content"
                    	android:gravity="left|center_vertical"
                    	android:text="@string/festivalname"
                    	android:textAppearance="?android:attr/textAppearanceLarge" />
                    
                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="left"
                        android:paddingLeft="10dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal" >
                    
                    <TextView
                    	android:id="@+id/textView2"
                    	android:layout_width="wrap_content"
                    	android:layout_height="wrap_content"
                    	android:gravity="left|center_vertical"
                    	android:text="@string/festivaldate"
                    	android:textAppearance="?android:attr/textAppearanceLarge" />
                    
                    <TextView
                    	android:id="@+id/textView6"
                    	android:layout_width="match_parent"
                    	android:layout_height="wrap_content"
                    	android:layout_gravity="center"
                    	android:gravity="left"
                    	android:paddingLeft="10dp"
                    	android:textAppearance="?android:attr/textAppearanceMedium" />
                    
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal" >
                    
                    <TextView
                    	android:id="@+id/textView3"
                    	android:layout_width="wrap_content"
                    	android:layout_height="wrap_content"
                    	android:gravity="left|center_vertical"
                    	android:text="@string/festivalplace"
                    	android:textAppearance="?android:attr/textAppearanceLarge" />
                    
                    <TextView
                    	android:id="@+id/textView7"
                    	android:layout_width="match_parent"
                    	android:layout_height="wrap_content"
                    	android:gravity="left"
                    	android:layout_gravity="center"
                    	android:paddingLeft="10dp"
                    	android:textAppearance="?android:attr/textAppearanceMedium" />
                    
                </LinearLayout>
            </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <View
       		android:layout_width="fill_parent"
        	android:layout_height="1dp"
        	android:gravity="center_vertical"
        	android:background="@android:color/holo_blue_light" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:text="@string/festivalcontent"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
</LinearLayout>
<ImageView
        android:id="@+id/expanded_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:contentDescription="@string/date" />

</FrameLayout>
